fixed overflow on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,12 @@ body {
   font-weight: 700;
   font-family: "Red Hat Text", sans-serif;
   color: var(--white);
+}
+
+.wrapper {
+  width: 100%;
   overflow-y: scroll;
+  position: relative;
   overflow-x: hidden;
 }
 
@@ -87,6 +92,12 @@ body {
   z-index: -2;
 }
 
+.bottom {
+  position: fixed;
+  bottom: 0%;
+  width: 100%;
+}
+
 footer {
   height: 40px;
   position: fixed;
@@ -105,7 +116,7 @@ ul.social-media-list {
   padding: 0;
   font-size: 0;
   text-align: center;
-  margin-top: 275px;
+  margin: 5%;
 }
 
 ul.social-media-list img {
